price comparison of pre built pcs from newegg, logic and db only, no html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 spring.application.name=etl1
 spring.datasource.url=jdbc:postgresql://localhost:5432/etl1db
-spring.datasource.username=timcharteris
-spring.datasource.password=postgre
+spring.datasource.username=graceholland
