--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=etl1
 spring.datasource.url=jdbc:postgresql://localhost:5432/etl1db
+spring.config.import=optional:file:.env[.properties]
+
+# OAuth2 Configuration
+spring.security.oauth2.client.registration.auth0.client-id=${OAUTH_CLIENT_ID}
+spring.security.oauth2.client.registration.auth0.client-secret=${OAUTH_CLIENT_SECRET}
+spring.security.oauth2.client.registration.auth0.scope=openid,profile,email
+spring.security.oauth2.client.registration.auth0.redirect-uri=http://localhost:8080/login/oauth2/code/auth0
+
+spring.security.oauth2.client.provider.auth0.issuer-uri=${OAUTH_ISSUER_URI}
