Implementing Basket backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,17 @@
-spring.application.name=etl1
+# PostgreSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/etl1db
+spring.datasource.username=nattspeight
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration - Let JPA create tables instead of Flyway
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Disable Flyway temporarily
+spring.flyway.enabled=false
+
+# Server Configuration
+server.port=8080
