--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
         <artifactId>spring-data-jpa</artifactId>
         <version>3.3.2</version>
     </dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
   </dependencies>
 
 	<build>
