Reset oauth details in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/etl1db
 spring.config.import=optional:file:.env[.properties]
 
 # OAuth2 Configuration
-spring.security.oauth2.client.registration.auth0.client-id=Ow4xGShneGg3b6HtGSJcLbnnxKoFkM8N
-spring.security.oauth2.client.registration.auth0.client-secret=KWBoFeRnCXV_RY_UxVcwSHFeoxUvdhxe6ScPoOIit15F6kUoiKHEQo1Dw_VkVEzl
+spring.security.oauth2.client.registration.auth0.client-id=${OAUTH_CLIENT_ID}
+spring.security.oauth2.client.registration.auth0.client-secret=${OAUTH_CLIENT_SECRET}
 spring.security.oauth2.client.registration.auth0.scope=openid,profile,email
 spring.security.oauth2.client.registration.auth0.redirect-uri=http://localhost:8080/login/oauth2/code/auth0
 
-spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-nkoakipmfm3rqyah.uk.auth0.com/
+spring.security.oauth2.client.provider.auth0.issuer-uri=${OAUTH_ISSUER_URI}
